--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,11 +13,14 @@ dependencies:
   flutter_riverpod: ^2.6.1
   go_router: ^15.1.1
   intl: ^0.20.2
+  path_provider: ^2.1.5
+  share_plus: ^11.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
   test: ^1.25.15
+  mocktail: ^1.0.4
 flutter:
   uses-material-design: true
   assets:
